Added Spark 1.1.0 prebuilt for hadoop-2.4